--- a/contact-app-rest-api/template.yaml
+++ b/contact-app-rest-api/template.yaml
@@ -14,9 +14,29 @@ Resources:
             Service: apigateway.amazonaws.com
           Action: sts:AssumeRole
       Path: "/"
-      ManagedPolicyArns:
-      - arn:aws:iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs
-      - arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess
+      Policies:
+      - PolicyName: api-dynamo-proxy-policy
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: Allow
+            Action:
+            - dynamodb:GetItem
+            - dynamodb:DeleteItem
+            - dynamodb:PutItem
+            - dynamodb:Scan
+            - dynamodb:Query
+            - dynamodb:UpdateItem
+            Resource: !Sub
+              - 'arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}'
+              - { 'tableName': !Ref ContactsTable }
+          - Effect: Allow
+            Action:
+            - logs:CreateLogGroup
+            - logs:CreateLogStream
+            - logs:PutLogEvents
+            Resource:
+            - arn:aws:logs:*:*:*
   ContactsTable:
     Type: AWS::Serverless::SimpleTable
   ContactsAPI:
